fix: :bug: fix swapper fiat balance overflow and exception handling

--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -67,3 +67,7 @@ a {
 .white-space-pre-line {
     white-space: pre-line;
 }
+
+.text-overflow-ellipsis {
+    text-overflow: ellipsis;
+}
